fix: p selector and spacing with padding

--- a/src/styles/pages_styles/pages_projects_individual.scss
+++ b/src/styles/pages_styles/pages_projects_individual.scss
@@ -26,7 +26,7 @@ article {
 }
 
 section {
-    padding: 2em;
+    padding: 2dvh;
 }
 
 h1,
@@ -36,10 +36,6 @@ h2 {
 
 h3 {
     font-size: clamp(2dvh, 1dvh + 0.6em, 2.5dvh + 1em);
-}
-
-p {
-    font-size: clamp(2dvh, 1dvh + 0.8em, 2dvh + 1em);
 }
 
 //=========================================================
@@ -52,7 +48,7 @@ p {
     display: block;
     margin-left: 0%;
     margin-top: -10em;
-    padding: 1em;
+    padding: 2dvh;
     padding-left: 0;
     position: fixed;
 
@@ -177,6 +173,7 @@ p {
         //width: 50%;
         //text-wrap:wrap;
         //display: flex;
+        font-size: clamp(2dvh, 1dvh + 0.8em, 2dvh + 1em);
 
         img {
             width: 200px;
